--- a/frontend/templates/map.html
+++ b/frontend/templates/map.html
@@ -47,11 +47,13 @@
     <div class="map">Map</div>
     <div class="connect">Connect</div>
     <div class="rectangle-38"></div>
-    <div class="move-map">
       <div class="map-combined">
-        <img class="basemap-image" src="{% static '/assets/basemap-image0.png' %}" />
-        <img class="basemap-image2" src="{% static '/assets/basemap-image1.png' %}" />
-      </div>
+        <div class="move-map">
+          <div class="center-container">
+            <img class="basemap-image" src="{% static '/assets/basemap-image0.png' %}" />
+            <img class="basemap-image2" src="{% static '/assets/basemap-image1.png' %}" />
+          </div>
+        </div>
       <div class="pin">
         <img class="ellipse-1" src="{% static '/assets/ellipse-10.svg' %}" />
         <div class="frame-11">
