--- a/frontend/static/css/map.css
+++ b/frontend/static/css/map.css
@@ -78,7 +78,7 @@
   position: absolute;
   left: 905px;
   top: 128px;
-  width: 125px;
+  width: 100%;
   height: 70px;
 }
 .connect {
@@ -105,19 +105,24 @@
   position: absolute;
   inset: 0;
 }
-.map-combined {
-  width: 100%;
-  height: 100%;
-  position: static;
-}
+/* Centering container */
 .center-container {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh; /* Full viewport height */
-  width: 100vw;  /* Full viewport width */
-  overflow: hidden; /* Prevent overflow */
+  height: 100vh; /* Full viewport height to center vertically */
+  width: 100vw; /* Full viewport width to center horizontally */
+  overflow: hidden; /* Prevents overflow */
 }
+
+/* Centered map-combined */
+.map-combined {
+  width: 100%; /* Full width */
+  height: auto; /* Auto height to fit content */
+  max-height: 100%; /* Prevents the height from exceeding container */
+  position: relative;
+}
+
 .move-map {
   background: rgba(0, 0, 0, 0);
   width: 100%;
